# ecommerce-rfm-analysis

./: .gitignore  README.md  business_params.toml  column_mapping.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MEETING_NOTES.md  MODULES.md  PLAN.md
output/: clv_table.csv  funnel_table.csv  rfm_table.csv
src/: __init__.py  clv_estimation.py  config.py  data_preprocessing.py  funnel_attribution.py  main.py  plotting.py  rfm_analysis.py  schema.py
tests/: conftest.py  test_clv_estimation.py  test_data_preprocessing.py  test_funnel_attribution.py  test_rfm_analysis.py
