[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-rfm-analysis"
version = "0.1.0"
description = "E-commerce customer analysis: RFM segmentation + funnel attribution + CLV estimation"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
