[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-rfm-analysis"
version = "0.2.0"
description = "E-commerce customer analysis: RFM segmentation + funnel attribution + CLV estimation"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "matplotlib>=3.5.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pandas-stubs>=2.0.0",
]

[project.scripts]
rfm-analysis = "src.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

# ── mypy ──────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "matplotlib",
    "openpyxl",
    "tomli",
    "pandas._typing",
]
ignore_missing_imports = true

# ── ruff ───────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 95

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
